--- a/css/master.css
+++ b/css/master.css
@@ -1,15 +1,28 @@
 .jumbotron {
   margin-bottom: 20px;
-
+  background-image: url("../imgs/creepy.jpg");
+  color: white;
 }
+
 .jumbotron h1 {
   text-align: center;
+  color: lightgreen;
+  text-shadow: -5px 0 #000000,0 1px #000000,1px 0 #000000,0 -1px #000000;
 }
 img {
   max-width: 100%;
 
 }
-
+body {
+  background-color: gray;
+}
 .output {
   display:none;
+  font-size: 25px;
+  color: red;
+  background-color: lightgray;
+}
+
+#contact {
+  text-decoration: underline;
 }
